Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-01-19 02:14+0000\n"
+"POT-Creation-Date: 2022-01-26 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -125,7 +125,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -144,7 +144,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -181,7 +181,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -200,7 +200,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -282,7 +282,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -301,7 +301,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -338,7 +338,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -357,7 +357,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
