--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-01-25 02:22+0000\n"
+"POT-Creation-Date: 2022-01-26 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -499,7 +499,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -518,7 +518,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -947,7 +947,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -966,7 +966,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -1118,7 +1118,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -1137,7 +1137,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -1174,7 +1174,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -1193,7 +1193,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -1809,7 +1809,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -1828,7 +1828,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -1865,7 +1865,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -1884,7 +1884,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -2261,7 +2261,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -2280,7 +2280,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -2317,7 +2317,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -2336,7 +2336,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
