--- a/l10n/po/ja_JP/_versions/main/guides/hibernate-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/hibernate-reactive.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-01-19 02:19+0000\n"
+"POT-Creation-Date: 2022-01-26 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -30,13 +30,9 @@ msgstr ""
 msgid "link:https://hibernate.org/reactive/[Hibernate Reactive] is a reactive API for Hibernate ORM, supporting non-blocking database drivers and a reactive style of interaction with the database."
 msgstr ""
 
-#. type: delimited block -
+#. type: delimited block =
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:20
-#, no-wrap
-msgid ""
-"Hibernate Reactive works with the same annotations and most of the configuration described in the\n"
-"xref:quarkus-hibernate-orm.adoc[Hibernate ORM guide]. This guide will only focus on what's specific\n"
-"for Hibernate Reactive.\n"
+msgid "Hibernate Reactive works with the same annotations and most of the configuration described in the xref:quarkus-hibernate-orm.adoc[Hibernate ORM guide]. This guide will only focus on what's specific for Hibernate Reactive."
 msgstr ""
 
 #. type: Title ==
