--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-general-config-items.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-01-19 02:14+0000\n"
+"POT-Creation-Date: 2022-01-26 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -539,7 +539,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -558,7 +558,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -987,7 +987,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -1006,7 +1006,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -1158,7 +1158,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -1177,7 +1177,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -1214,7 +1214,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -1233,7 +1233,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -1843,7 +1843,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -1862,7 +1862,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -1899,7 +1899,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -1918,7 +1918,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -2295,7 +2295,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -2314,7 +2314,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -2351,7 +2351,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -2370,7 +2370,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
