--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-hibernate-search-orm-hibernate-search-elasticsearch-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-hibernate-search-orm-hibernate-search-elasticsearch-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-01-25 02:22+0000\n"
+"POT-Creation-Date: 2022-01-26 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -199,7 +199,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -218,7 +218,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -255,7 +255,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -274,7 +274,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -362,7 +362,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -381,7 +381,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -418,7 +418,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -437,7 +437,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -562,7 +562,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -581,7 +581,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -618,7 +618,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -637,7 +637,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -725,7 +725,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -744,7 +744,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -781,7 +781,7 @@ msgid ""
 "When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;\n"
 "it should not be relied upon.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_settings[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
@@ -800,7 +800,7 @@ msgid ""
 "The file does not need to (and generally shouldn't) contain the full mapping:\n"
 "Hibernate Search will automatically inject missing properties (index fields) in the given mapping.\n"
 "\n"
-"See https://docs.jboss.org/hibernate/search/6.1/reference/en-US/html_single/#_custom_index_mapping[this section of the reference documentation]\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]\n"
 "for more information.\n"
 "--"
 msgstr ""
