--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-native-pkg-native-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-native-pkg-native-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-08 02:20+0000\n"
+"POT-Creation-Date: 2022-01-26 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -402,7 +402,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The docker image to use to do the image build\n"
+"The docker image to use to do the image build. It can be one of `graalvm`, `mandrel`, or the full image path, e.g. `quay.io/quarkus/ubi-quarkus-mandrel:21.3-java17`.\n"
 "--"
 msgstr ""
 
