--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-roles.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-roles.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2022-01-26 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -47,17 +47,16 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Path to the claim containing an array of groups. It starts from the top level JWT JSON object and can contain multiple segments where each segment represents a JSON object name only, example: \"realm/groups\". Use double quotes with the namespace qualified claim names. This property can be used if a token has no 'groups' claim but has the groups set in a different claim.\n"
+"List of paths to claims containing an array of groups. Each path starts from the top level JWT JSON object and can contain multiple segments where each segment represents a JSON object name only, example: \"realm/groups\". Use double quotes with the namespace qualified claim names. This property can be used if a token has no 'groups' claim but has the groups set in one or more different claims.\n"
 "--"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-roles.adoc:17
-#: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-roles.adoc:26
 #: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-roles.adoc:44
-#: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-roles.adoc:53
-#, no-wrap
-msgid "string"
+#, fuzzy, no-wrap
+#| msgid "string"
+msgid "list of string"
 msgstr "string"
 
 #. type: Table
@@ -68,9 +67,16 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Separator for splitting a string which may contain multiple group values. It will only be used if the \"role-claim-path\" property points to a custom claim whose value is a string. A single space will be used by default because the standard 'scope' claim may contain a space separated sequence.\n"
+"Separator for splitting a string which may contain multiple group values. It will only be used if the \"role-claim-path\" property points to one or more custom claims whose values are strings. A single space will be used by default because the standard 'scope' claim may contain a space separated sequence.\n"
 "--"
 msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-roles.adoc:26
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-roles.adoc:53
+#, no-wrap
+msgid "string"
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-roles.adoc:34
@@ -99,7 +105,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Path to the claim containing an array of groups. It starts from the top level JWT JSON object and can contain multiple segments where each segment represents a JSON object name only, example: \"realm/groups\". Use double quotes with the namespace qualified claim names. This property can be used if a token has no 'groups' claim but has the groups set in a different claim.\n"
+"List of paths to claims containing an array of groups. Each path starts from the top level JWT JSON object and can contain multiple segments where each segment represents a JSON object name only, example: \"realm/groups\". Use double quotes with the namespace qualified claim names. This property can be used if a token has no 'groups' claim but has the groups set in one or more different claims.\n"
 "--"
 msgstr ""
 
@@ -111,7 +117,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Separator for splitting a string which may contain multiple group values. It will only be used if the \"role-claim-path\" property points to a custom claim whose value is a string. A single space will be used by default because the standard 'scope' claim may contain a space separated sequence.\n"
+"Separator for splitting a string which may contain multiple group values. It will only be used if the \"role-claim-path\" property points to one or more custom claims whose values are strings. A single space will be used by default because the standard 'scope' claim may contain a space separated sequence.\n"
 "--"
 msgstr ""
 
