--- a/l10n/po/ja_JP/_versions/main/guides/platform.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/platform.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-10-18 02:25+0000\n"
+"POT-Creation-Date: 2022-01-26 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -304,7 +304,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/platform.adoc:126
-msgid "In this case the default value for `quarkus.native.builder-image` will be provided by the platform. The user will still be able to set the desired value for `quarkus.native.builder-image` in its `application.properties`, of course. But in case it's not customized by the user, the default value will be coming from the platform properties.  A platform properties file for the example above would contain (the actual value is provided as an example):"
+#, fuzzy
+#| msgid "In this case the default value for `quarkus.native.builder-image` will be provided by the platform. The user will still be able to set the desired value for `quarkus.native.builder-image` in its `application.properties`, of course. But in case it's not customized by the user, the default value will be coming from the platform properties.  A platform properties file for the example above would contain (the actual value is provided as an example):"
+msgid "In this case the default value for `quarkus.native.builder-image` will be provided by the platform. The user will still be able to set the desired value for `quarkus.native.builder-image` in its `application.properties`, of course. But in case it's not customized by the user, the default value will be coming from the platform properties.  A platform properties file for the example above would contain:"
 msgstr "この場合、 `quarkus.native.builder-image` のデフォルト値はプラットフォームによって提供されます。もちろん、ユーザーは `application.properties` で `quarkus.native.builder-image` に希望の値を設定することができます。しかし、ユーザーがカスタマイズしていない場合は、デフォルト値はプラットフォームのプロパティから提供されます。上記の例のプラットフォームのプロパティファイルには、以下のようなものが含まれています（実際の値は例として提供されています）。"
 
 #. type: delimited block -
