Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-01-26 02:22+0000\n"
+"POT-Creation-Date: 2022-01-27 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -5758,7 +5758,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The base image to be used when a container image is being produced for the jar build. When the application is built against Java 17 or higher, `registry.access.redhat.com/ubi8/openjdk-17-runtime:1.10` is used as the default. Otherwise `registry.access.redhat.com/ubi8/openjdk-11-runtime:1.10` is used as the default.\n"
+"The base image to be used when a container image is being produced for the jar build. When the application is built against Java 17 or higher, `registry.access.redhat.com/ubi8/openjdk-17:1.11` is used as the default. Otherwise `registry.access.redhat.com/ubi8/openjdk-11:1.11` is used as the default.\n"
 "--"
 msgstr ""
 
