--- a/l10n/po/ja_JP/_versions/main/guides/centralized-log-management.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/centralized-log-management.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-26 02:16+0000\n"
+"POT-Creation-Date: 2022-01-27 02:15+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -188,7 +188,9 @@ msgstr "Graylog"
 #: upstream/_versions/main/guides/centralized-log-management.adoc:176
 #: upstream/_versions/main/guides/centralized-log-management.adoc:265
 #: upstream/_versions/main/guides/centralized-log-management.adoc:351
-msgid "You can do this via the following docker-compose file that you can launch via `docker-compose run -d`:"
+#, fuzzy
+#| msgid "You can do this via the following docker-compose file that you can launch via `docker-compose run -d`:"
+msgid "You can do this via the following `docker-compose.yml` file that you can launch via `docker-compose up -d`:"
 msgstr "これは、 `docker-compose run -d` から起動できる以下の docker-compose ファイルを使って行うことができます。"
 
 #. type: delimited block -
