Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-qute.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-qute.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-01-07 02:26+0000\n"
+"POT-Creation-Date: 2022-02-02 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -221,6 +221,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-qute.adoc:97
 #: upstream/_generated-config/main/config/quarkus-qute.adoc:107
+#: upstream/_generated-config/main/config/quarkus-qute.adoc:125
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
@@ -228,6 +229,7 @@ msgstr "boolean"
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-qute.adoc:100
 #: upstream/_generated-config/main/config/quarkus-qute.adoc:110
+#: upstream/_generated-config/main/config/quarkus-qute.adoc:128
 #, no-wrap
 msgid "`true`"
 msgstr "`true`"
@@ -249,6 +251,42 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-qute.adoc:115
 #, no-wrap
 msgid ""
+"[[quarkus-qute_quarkus.qute.timeout]]`link:#quarkus-qute_quarkus.qute.timeout[quarkus.qute.timeout]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The global rendering timeout in milliseconds. It is used if no `timeout` template instance attribute is set.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-qute.adoc:116
+#, no-wrap
+msgid "long"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-qute.adoc:119
+#, no-wrap
+msgid "`10000`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-qute.adoc:124
+#, no-wrap
+msgid ""
+"[[quarkus-qute_quarkus.qute.use-async-timeout]]`link:#quarkus-qute_quarkus.qute.use-async-timeout[quarkus.qute.use-async-timeout]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"If set to `true` then the timeout should also be used for asynchronous rendering methods, such as `TemplateInstance++#++createUni()` and `TemplateInstance++#++renderAsync()`.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-qute.adoc:133
+#, no-wrap
+msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-qute_quarkus.qute.content-types-content-types]]`link:#quarkus-qute_quarkus.qute.content-types-content-types[quarkus.qute.content-types]`\n"
 "\n"
 "[.description]\n"
@@ -258,7 +296,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-qute.adoc:116
+#: upstream/_generated-config/main/config/quarkus-qute.adoc:134
 #, no-wrap
 msgid "`Map<String,String>`"
 msgstr ""
