--- a/l10n/po/ja_JP/_versions/main/guides/funqy-amazon-lambda-http.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/funqy-amazon-lambda-http.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-10 02:16+0000\n"
+"POT-Creation-Date: 2022-02-02 02:15+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -92,16 +92,36 @@ msgstr "はじめに"
 msgid "The steps to get this quickstart running are exactly the same as defined in the xref:amazon-lambda-http.adoc[Amazon Lambda HTTP Guide].  This differences are that you are running from a quickstart and the maven dependencies are slightly different."
 msgstr "このクイックスタートを実行するための手順は、 link:amazon-lambda-http[Amazon Lambda HTTP Guide] で定義されているものと全く同じです。この違いは、クイックスタートから実行していることと、mavenの依存関係が若干異なることです。"
 
+#. type: Block title
+#: upstream/_versions/main/guides/funqy-amazon-lambda-http.adoc:46
+#, no-wrap
+msgid "pom.xml"
+msgstr ""
+
 #. type: delimited block -
-#: upstream/_versions/main/guides/funqy-amazon-lambda-http.adoc:55
+#: upstream/_versions/main/guides/funqy-amazon-lambda-http.adoc:56
 #, no-wrap
 msgid ""
-"        <dependency>\n"
-"            <groupId>io.quarkus</groupId>\n"
-"            <artifactId>quarkus-funqy-http</artifactId>\n"
-"        </dependency>\n"
-"        <dependency>\n"
-"            <groupId>io.quarkus</groupId>\n"
-"            <artifactId>quarkus-amazon-lambda-http</artifactId>\n"
-"        </dependency>\n"
+"<dependency>\n"
+"    <groupId>io.quarkus</groupId>\n"
+"    <artifactId>quarkus-funqy-http</artifactId>\n"
+"</dependency>\n"
+"<dependency>\n"
+"    <groupId>io.quarkus</groupId>\n"
+"    <artifactId>quarkus-amazon-lambda-http</artifactId>\n"
+"</dependency>\n"
+msgstr ""
+
+#. type: Block title
+#: upstream/_versions/main/guides/funqy-amazon-lambda-http.adoc:59
+#, no-wrap
+msgid "build.gradle"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/funqy-amazon-lambda-http.adoc:63
+#, no-wrap
+msgid ""
+"implementation(\"io.quarkus:quarkus-funqy-http\")\n"
+"implementation(\"io.quarkus:quarkus-amazon-lambda-http\")\n"
 msgstr ""
