--- a/l10n/po/ja_JP/_versions/main/guides/grpc-service-implementation.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/grpc-service-implementation.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-10 02:16+0000\n"
+"POT-Creation-Date: 2022-02-02 02:15+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -651,27 +651,79 @@ msgstr ""
 #. type: Title ==
 #: upstream/_versions/main/guides/grpc-service-implementation.adoc:331
 #, no-wrap
+msgid "Trying out your services manually"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/grpc-service-implementation.adoc:334
+msgid "In the dev mode, you can try out your gRPC services in the Quarkus Dev UI.  Just go to http://localhost:8080/q/dev and click on _Services_ under the gRPC tile."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/grpc-service-implementation.adoc:336
+msgid "Please note that your application needs to expose the \"normal\" HTTP port for the Dev UI to be accessible. If your application does not expose any HTTP endpoints, you can create a dedicated profile with a dependency on `quarkus-vertx-http`:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/grpc-service-implementation.adoc:349
+#, no-wrap
+msgid ""
+"    <profiles>\n"
+"        <profile>\n"
+"            <id>development</id>\n"
+"            <dependencies>\n"
+"                <dependency>\n"
+"                    <groupId>io.quarkus</groupId>\n"
+"                    <artifactId>quarkus-vertx-http</artifactId>\n"
+"                </dependency>\n"
+"            </dependencies>\n"
+"        </profiles>\n"
+"    </profile>\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/grpc-service-implementation.adoc:351
+msgid "Having it, you can run the dev mode with: `mvn quarkus:dev -Pdevelopment`."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/grpc-service-implementation.adoc:353
+msgid "If you use Gradle, you can simply add a dependency for the `quarkusDev` task:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/grpc-service-implementation.adoc:359
+#, no-wrap
+msgid ""
+"dependencies {\n"
+"    quarkusDev 'io.quarkus:quarkus-vertx-http'\n"
+"}\n"
+msgstr ""
+
+#. type: Title ==
+#: upstream/_versions/main/guides/grpc-service-implementation.adoc:361
+#, no-wrap
 msgid "gRPC Server metrics"
 msgstr ""
 
 #. type: Title ===
-#: upstream/_versions/main/guides/grpc-service-implementation.adoc:333
+#: upstream/_versions/main/guides/grpc-service-implementation.adoc:363
 #, no-wrap
 msgid "Enabling metrics collection"
 msgstr ""
 
 #. type: Plain text
-#: upstream/_versions/main/guides/grpc-service-implementation.adoc:337
+#: upstream/_versions/main/guides/grpc-service-implementation.adoc:367
 msgid "gRPC server metrics are automatically enabled when the application also uses the xref:micrometer.adoc[`quarkus-micrometer`] extension.  Micrometer collects the metrics of all the gRPC services implemented by the application."
 msgstr ""
 
 #. type: Plain text
-#: upstream/_versions/main/guides/grpc-service-implementation.adoc:339
+#: upstream/_versions/main/guides/grpc-service-implementation.adoc:369
 msgid "As an example, if you export the metrics to Prometheus, you will get:"
 msgstr ""
 
 #. type: delimited block -
-#: upstream/_versions/main/guides/grpc-service-implementation.adoc:355
+#: upstream/_versions/main/guides/grpc-service-implementation.adoc:385
 #, no-wrap
 msgid ""
 "# HELP grpc_server_responses_sent_messages_total The total number of responses sent\n"
@@ -690,23 +742,23 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: upstream/_versions/main/guides/grpc-service-implementation.adoc:358
+#: upstream/_versions/main/guides/grpc-service-implementation.adoc:388
 msgid "The service name, method and type can be found in the _tags_."
 msgstr ""
 
 #. type: Title ===
-#: upstream/_versions/main/guides/grpc-service-implementation.adoc:359
+#: upstream/_versions/main/guides/grpc-service-implementation.adoc:389
 #, no-wrap
 msgid "Disabling metrics collection"
 msgstr ""
 
 #. type: Plain text
-#: upstream/_versions/main/guides/grpc-service-implementation.adoc:362
+#: upstream/_versions/main/guides/grpc-service-implementation.adoc:392
 msgid "To disable the gRPC server metrics when `quarkus-micrometer` is used, add the following property to the application configuration:"
 msgstr ""
 
 #. type: delimited block -
-#: upstream/_versions/main/guides/grpc-service-implementation.adoc:366
+#: upstream/_versions/main/guides/grpc-service-implementation.adoc:396
 #, no-wrap
 msgid "quarkus.micrometer.binder.grpc-server.enabled=false\n"
 msgstr ""
